@@ -30,12 +30,12 @@ import gov.cdc.nbs.report.models.ReportResult;
 import gov.cdc.nbs.report.models.ReportSpec;
 import gov.cdc.nbs.report.models.SortSpec;
 import gov.cdc.nbs.repository.DataSourceRepository;
-import gov.cdc.nbs.repository.ReportFilterRepository;
 import gov.cdc.nbs.repository.ReportLibraryRepository;
 import gov.cdc.nbs.repository.ReportRepository;
 import gov.cdc.nbs.repository.ReportSectionRepository;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.apache.commons.lang3.NotImplementedException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
@@ -51,7 +51,6 @@ public class ReportService {
   private final ReportRepository reportRepository;
   private final DataSourceRepository dataSourceRepository;
   private final ReportLibraryRepository reportLibraryRepository;
-  private final ReportFilterRepository reportFilterRepository;
   private final ReportSectionRepository reportSectionRepository;
   private final ReportMapper reportMapper;
 
@@ -64,7 +63,6 @@ public class ReportService {
       final ReportRepository reportRepository,
       final DataSourceRepository dataSourceRepository,
       final ReportLibraryRepository reportLibraryRepository,
-      final ReportFilterRepository reportFilterRepository,
       final ReportSectionRepository reportSectionRepository,
       RestClient reportExecutionClient,
       final DataSourceNameConfiguration dataSourceNameConfig,
@@ -74,7 +72,6 @@ public class ReportService {
     this.reportRepository = reportRepository;
     this.dataSourceRepository = dataSourceRepository;
     this.reportLibraryRepository = reportLibraryRepository;
-    this.reportFilterRepository = reportFilterRepository;
     this.reportSectionRepository = reportSectionRepository;
     this.reportMapper = reportMapper;
 
@@ -86,63 +83,37 @@ public class ReportService {
 
   @Transactional
   public Report createReport(AdminReportRequest request, NbsUserDetails user) {
-    ReportMetadata metadata = verifyReportMetadata(request);
-
-    Report savedReport =
-        reportRepository.save(
-            reportMapper.fromAdminReportRequest(
-                request, user, metadata.reportLibrary, metadata.dataSource, null));
-
-    if (!request.filterRequests().isEmpty()) {
-      List<ReportFilter> reportFilters =
-          request.filterRequests().stream()
-              .map(f -> reportFilterBuilder.build(f, savedReport))
-              .toList();
-
-      reportFilterRepository.saveAll(reportFilters);
-    }
-
-    return savedReport;
+    return upsertReport(request, user, null);
   }
 
   @Transactional
   public Report editReport(
       AdminReportRequest request, NbsUserDetails user, ReportId existingReportId) {
-    if (existingReportId != null && !reportRepository.existsById(existingReportId)) {
-      throw new NotFoundException(getReportNotFoundText(existingReportId));
-    }
+    Report existingReport =
+        reportRepository
+            .findById(existingReportId)
+            .orElseThrow(() -> new NotFoundException(getReportNotFoundText(existingReportId)));
 
+    return upsertReport(request, user, existingReport);
+  }
+
+  private Report upsertReport(
+      AdminReportRequest request, NbsUserDetails user, Report existingReport) {
     ReportMetadata metadata = verifyReportMetadata(request);
 
-    Report savedReport =
-        reportRepository.save(
-            reportMapper.fromAdminReportRequest(
-                request, user, metadata.reportLibrary, metadata.dataSource, existingReportId));
+    Report report =
+        reportMapper.fromAdminReportRequest(
+            request, user, metadata.reportLibrary, metadata.dataSource, existingReport);
 
-    List<ReportFilter> existingFilters = savedReport.getReportFilters();
-
-    List<ReportFilter> filtersToDelete =
-        existingFilters.stream()
-            .filter(
-                f ->
-                    request.filterRequests().stream()
-                        .noneMatch(fr -> fr.id() != null && fr.id().equals(f.getId())))
-            .toList();
-
-    List<ReportFilter> filtersToUpsert =
+    List<ReportFilter> reportFilters =
         request.filterRequests().stream()
-            .map(f -> reportFilterBuilder.build(f, savedReport))
-            .toList();
+            .map(f -> reportFilterBuilder.build(f, report))
+            .collect(Collectors.toList()); // needs to be modifiable
+    // For orphan detection/removal to work, need to keep the same container
+    report.getReportFilters().clear();
+    report.getReportFilters().addAll(reportFilters);
 
-    if (!filtersToDelete.isEmpty()) {
-      reportFilterRepository.deleteAll(filtersToDelete);
-    }
-
-    if (!filtersToUpsert.isEmpty()) {
-      reportFilterRepository.saveAll(filtersToUpsert);
-    }
-
-    return savedReport;
+    return reportRepository.save(report);
   }
 
   public ReportConfiguration getReport(Long reportUid, Long dataSourceUid) {
